# kolobot

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: Welcome.py  api.py  const.py
src/app/: chat.py  chunk.py  embedder.py  ner.py  rag.py
src/pages/: 1_‍🚀️️_rag.py  2_🔮_Index.py  3_👩‍🚀_chat.py
src/pages/pages/: chat.py  dispatcher.py  rag.py
src/store/: chunk.py  intent.py
